# wechat-article

./: .env.example  .gitignore  README.md  followed_accounts.json.example  pyproject.toml  verify_mcp.py
src/wechat_mcp/: client.py  config.py  server.py
